# shared-models

./: .clinerules  .gitignore  .project-meta.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
.schemas/auth/: JWTPayload.json  RefreshRequest.json  TokenResponse.json  UserLoginRequest.json  UserProfile.json  UserRegisterRequest.json  UserResponse.json
.schemas/content/: CollectRequest.json  CollectResult.json  RewriteRequest.json  RewriteResult.json
.schemas/llm/: LLMGlobalConfig.json  LLMInvocationRequest.json  LLMInvocationResponse.json  LLMProviderConfig.json  ModelRoute.json  UserLLMOverride.json
.schemas/pipeline/: ContentPacket.json  PipelineStage.json  ScenePrompt.json  VideoAsset.json
.schemas/prompt/: BatchOptimizeRequest.json  OptimizeRequest.json  OptimizeResult.json  ReverseRequest.json  ReverseResult.json  RewriteRequest.json
.schemas/sentence/: EraInfo.json  SceneSegment.json  SentenceBlock.json  SplitResult.json  (+1 more)
docs/: ARCHITECTURE.md  DESIGN.md  PRD.md
references/: commits.md  quality-gates.md  testing.md
scripts/: export_schemas.py  generate_types.py
shared_models/: AGENTS.md  __init__.py  auth.py  content.py  llm.py  pipeline.py  prompt.py  schema_export.json  sentence.py  viral.py
tests/: conftest.py  test_auth.py  test_content.py  test_llm.py  test_pipeline.py  test_pipeline_integration.py  test_prompt.py  test_sentence.py  test_trendscope.py  test_viral.py
types/: auth.ts  content.ts  index.ts  llm.ts  pipeline.ts  prompt.ts  sentence.ts  trendscope.ts  viral.ts
(+31 files in other folders)
